--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Raffler</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Raffler</title>
+<%= stylesheet_link_tag "application" %>
+<%= javascript_include_tag "vendor/modernizr" %>
+<%= javascript_include_tag "application" %>
+<%= csrf_meta_tags %>
 </head>
+
 <body>
 
 <%= yield %>
