--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,1 +1,1 @@
-<%= content_tag "div", "Loading…", id: "container", data: { entries: Entry.all } %>
+<%= content_tag "div", "Loading…", id: "container", data: { entries: Entry.all, appointments: Appointment.all } %>
